--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
             }
         </script>
     
-        
         <section class="headerbanner">
             <div class="title">
                 <h2>Megan Kang</h2>
@@ -66,7 +65,7 @@
             <h4>About</h4>
             <p>Megan Kang graduated from UC Berkeley (magna cum laude, in the top 5% of her class) with a double major in Political Science and History. She received her Masters in Public Policy at the University of Chicago and is beginning her PhD in Sociology at Princeton in 2020. </p>
 
-            <p>Prior to her Masters, Megan spent time at Teach For America, the U.S. Dept of State, and the U.S. Senate. As a former 12th grade English teacher, she has had extensive experience working with students on their writing. Megan is most passionate about working with her clients to get to the core of their ideas and help them write essays that express their unique perspectives through colorful stories.</p> 
+            <p>Prior to her Masters, Megan spent time working at Teach For America, the U.S. Dept of State, and the U.S. Senate. As a former 12th grade English teacher, she has had extensive experience working with students on their writing. Megan is most passionate about working with her clients to get to the core of their ideas and help them write essays that express their unique perspectives through colorful stories.</p> 
 
 
             <p>Megan’s work has helped get students into:</p>
