--- a/meganservices.html
+++ b/meganservices.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="meganservices.css">
         <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|Nanum+Gothic|Poppins:300|Raleway:300,400,600,700&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
     </head>
     
