--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <li class="hiddenli"><a class="menu" href="#">Yo</a></li>
         <div class="reversefloat">
             <li><a class="menu" href="index.html">Home</a></li>
-        <li><a class="menu" href="meganservices.html">Services</a></li>
-        <li><a class="menu" href="megancontact.html">Contact</a></li>
+        <li><a class="menu" href="nishaanthservices.html">Services</a></li>
+        <li><a class="menu" href="nishaanthcontact.html">Contact</a></li>
          <li class="dropdown"><a href="javascript:void(0);" onclick="dropdownMenu()">&#9776;</a></li></div>
         
     </ul>
