--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav>
             
         <ul class="topnav" id="dropclick">
-            <h1><a class="Meganhome" href="index.html">Megan Kang</a></h1>
+            <h1><a class="Meganhome" href="index.html">Nishaanth Krishnan</a></h1>
         <li class="hiddenli"><a class="menu" href="#">Yo</a></li>
         <div class="reversefloat">
             <li><a class="menu" href="index.html">Home</a></li>
@@ -62,11 +62,11 @@
         </section>
         
         <section class="aboutbanner">
-            <img class="meganprof" src="megankang.jpg">
+            <img class="meganprof" src="nishaanthkrishnan.png">
             <h4>About</h4>
-            <p>Nishaanth Krishnan is a senior at UCLA majoring in Statistics and Data Science. He is passionate about helping students get into their dream colleges. </p>
+            <p>Nishaanth Krishnan is a senior at UCLA majoring in Statistics and Data Science. He is passionate about helping students excel on standardized tests like the SAT/ACT and get into their dream colleges! </p>
 
-            <p>During his undergraduate career, Nishaanth has completed internships and apprenticeships at companies like Meta and Netflix. He has also served as a peer college advisor at the UCLA Office of Admissions</p> 
+            <p>During his undergraduate career, Nishaanth has completed internships and apprenticeships at companies like Meta and Netflix. He has also served as a peer college advisor at the UCLA Office of Admissions.</p> 
 
 
             <p>Nishaanth's work has helped get students into:</p>
