--- a/nishaanthservices.html
+++ b/nishaanthservices.html
@@ -26,7 +26,7 @@
         <nav>
             
         <ul class="topnav" id="dropclick">
-            <h1><a class="Meganhome" href="index.html">Megan Kang</a></h1>
+            <h1><a class="Meganhome" href="index.html">Nishaanth Krishnan</a></h1>
         <li class="hiddenli"><a class="menu" href="#">Yo</a></li>
         <div class="reversefloat">
             <li><a class="menu" href="index.html">Home</a></li>
